package com.trio.model;

public interface TrioHolder {

    void addTrio(Deck trio);

    int getTrioCount();



}
