classDiagram
    %% ------------------------
    %% Game Interface
    %% ------------------------
    class Game {
        <<interface>>
        +startGame() void
        +playTurn() void
        +isFinished() bool
        +getWinner() TrioHolder
    }

    class SoloGame {
        -players : List~Player~
        -deck : Deck
        -currentPlayerIndex : int
        +startGame() void
        +playTurn() void
        +isFinished() bool
        +getWinner() Player
        +getCurrentPlayer() Player
        +nextTurn() void
    }

    class TeamGame {
        -teams : List~Team~
        -deck : Deck
        -currentTeamIndex : int
        -currentPlayerInTeam : int
        +startGame() void
        +playTurn() void
        +isFinished() bool
        +getWinner() Team
        +getCurrentPlayer() Player
        +nextTurn() void
    }

    Game <|.. SoloGame
    Game <|.. TeamGame

    %% ------------------------
    %% TrioHolder Interface
    %% ------------------------
    class TrioHolder {
        <<interface>>
        +addTrio(trio:Deck) void
        +getTrioCount() int
        +getTrios() List~Deck~
    }

    %% ------------------------
    %% Menu
    %% ------------------------
    class Menu {
        -currentUser : User
        +startGame(nbPlayers:int, gameType:String) Game
        +createSoloGame() SoloGame
        +createTeamGame() TeamGame
    }

    Menu ..> SoloGame : creates
    Menu ..> TeamGame : creates
    Menu "1" --> "1" User : currentUser

    %% ------------------------
    %% Players
    %% ------------------------
    class Player {
        #pseudo : String
        #hand : Deck
        #shownCards : Deck
        #trios : List~Deck~
        +play() void
        +pickCard(index:int) Card
        +addTrio(trio:Deck) void
        +getTrioCount() int
        +getTrios() List~Deck~
    }

    class Bot {
        -botName : String
        +play() void
    }

    class User {
        -pseudo : String
        -age : int
        -victoryCount : int
        +addVictory(count:int) void
    }

    class Team {
        -teamId : int
        -name : String
        -players : List~Player~
        -trios : List~Deck~
        +addTrio(trio:Deck) void
        +getTrioCount() int
        +getTrios() List~Deck~
        +addPlayer(player:Player) void
    }

    Player <|-- Bot
    Player <|-- User
    TrioHolder <|.. Player : implements
    TrioHolder <|.. Team : implements
    Team "1" o-- "2" Player : contains
    SoloGame "1" o-- "3..6" Player : players
    TeamGame "1" o-- "2..3" Team : teams

    %% ------------------------
    %% Cards / Deck
    %% ------------------------
    class Card {
        -value : int
        -isVisible : bool
        +getValue() int
        +setVisible(visible:bool) void
    }

    class Deck {
        -cards : List~Card~
        +addCard(card:Card) void
        +removeCard(index:int) Card
        +getSize() int
        +shuffle() void
        +sort() void
    }

    Deck "1" *-- "*" Card : contains
    Player "1" *-- "1" Deck : hand
    Player "1" *-- "1" Deck : shownCards
